--- a/pahlawan-pria.html
+++ b/pahlawan-pria.html
@@ -37,7 +37,7 @@
             Soedirma diadopsi oleh pamannya yang seorang penyanyi.
             <p align="left">Sumber : <a href="https://www.wikipedia.com">wikipedia.com</a></p>
           </td>
-          <td align="center"><img src="/tugas akhir/soedirman.jpg"></td>
+          <td align="center"><img src="/soedirman.jpg"></td>
         </tr>
       </table>
   </body>
