--- a/pahlawan-wanita.html
+++ b/pahlawan-wanita.html
@@ -22,7 +22,7 @@
           <b>Ibrahim Lamnga</b> bertempur melawan Belanda.
            <p align="right">Sumber : <a href="https://www.wikipedia.com">wikipedia.com</a></p>
          </td>
-         <td align="center"><img src="/tugas akhir/cut-nyak-dien.jpg">
+         <td align="center"><img src="/cut-nyak-dien.jpg">
          </td>
        </tr>
        <tr>
